--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,33 @@
+{% load staticfiles %}
+
 <html>
     <head>
+    	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <title>Django Girls blog</title>
     </head>
     <body>
-        <div>
+        <div class="page-header">
             <h1><a href="">Django Girls Blog</a></h1>
         </div>
 
-        {% for post in posts %}
-    		<div>
-        		<p>published: {{ post.published_date }}</p>
-        		<h1><a href="">{{ post.title }}</a></h1>
-        		<p>{{ post.text|linebreaksbr }}</p>
-    		</div>
-		{% endfor %}
+	<div class="content container">
+	    <div class="row">
+	        <div class="col-md-8">
+	            {% for post in posts %}
+	                <div class="post">
+	                    <div class="date">
+	                        {{ post.published_date }}
+	                    </div>
+	                    <h1><a href="">{{ post.title }}</a></h1>
+	                    <p>{{ post.text|linebreaksbr }}</p>
+	                </div>
+	            {% endfor %}
+	        </div>
+	    </div>
+	</div>
         
     </body>
 </html>
